set up authentication header fetching with requests to send tokens to the backend + config sentry for the front end

--- a/frontend/src/styles/auth.css
+++ b/frontend/src/styles/auth.css
@@ -7,7 +7,7 @@
       #f6e2f2 25%,
       #fac1ee 50%,
       #f3a7e3 75%,
-      #e28dd1 100%
+      #f399e1 100%
     ),
     radial-gradient(
       ellipse at top left,
